# arsene

./: .eslintrc.js  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
src/: album.rs  cli.rs  downloader.rs  lib.rs  main.rs  main.ts  music.rs  objects.ts  parser.rs
src/album-downloader/: album-downloader.ts
src/bandcamp/: bandcamp-album-converter.ts  bandcamp-parser.ts
src/cli/: args.rs  cli_utils.rs
src/download-manager/: download-manager.ts
src/downloader/: downloader_impl.rs
src/mp3-downloader/: mp3-downloader.ts
src/music/: album.rs  track.rs
src/parser/: bandcamp_objects.rs  parser_impl.rs
src/parsers/: parser-factory.ts
src/parsers/bandcamp/: bandcamp-album-converter.ts  bandcamp-objects.ts  bandcamp-parser.ts
src/parsers/common/: common-parser.ts
src/utils/: helpers.ts
