[package]
name = "arsene"
version = "0.1.1"
edition = "2021"
publish = true
description = "bandcamp downloader"
homepage = "https://github.com/IrvingWash/arsene"
repository = "https://github.com/IrvingWash/arsene.git"
readme = "README.md"
documentation = "https://github.com/IrvingWash/arsene"
license = "MIT"
authors = ["WI"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
expanduser = "1.2.2"
html-escape = "0.2.13"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
